--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@fastify/cors": "^10.0.1",
 		"fastify": "^5.1.0",
 		"nodemailer": "^6.9.16",
 		"smtp-server": "^3.13.6",
