--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@fastify/cors": "^10.0.1",
 		"fastify": "^5.1.0",
 		"nodemailer": "^6.9.16",
+		"require-in-the-middle": "^7.5.2",
 		"smtp-server": "^3.13.6",
 		"sqlite3": "^5.1.7"
 	},
