--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"dependencies": {
 		"@fastify/cors": "^10.0.1",
 		"fastify": "^5.1.0",
+		"node-cron": "^3.0.3",
 		"nodemailer": "^6.9.16",
 		"require-in-the-middle": "^7.5.2",
 		"smtp-server": "^3.13.6",
